--- a/robotics.html
+++ b/robotics.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>codesandbots</title>
+  <title>CodesandBots</title>
   <meta content="" name="description">
   
   <link href="assets/img/icon.png" rel="icon">
@@ -61,7 +61,7 @@
     <div class="container-fluid container-xl d-flex align-items-center justify-content-between">
       <a href="index.html" class="logo d-flex align-items-center">
       	<img src="assets/img/icon.png">
-        <span>codesandbots</span>
+        <span>CodesandBots</span>
       </a>
 
       <nav id="navbar" class="navbar">
@@ -365,7 +365,7 @@ Robotics helps address the growing demand for teaching science, technology, engi
           <div class="col-lg-5 col-md-12 footer-info">
             <a href="index.html" class="logo d-flex align-items-center">
               <img src="assets/img/icon.png" class="img-fluid" style="margin:0px;" height="30px" alt="">
-              <span>codesandbots</span>
+              <span>CodesandBots</span>
             </a>
             <p>A Company of AVIPL</p>
             <div class="social-links mt-3">
@@ -394,7 +394,7 @@ Robotics helps address the growing demand for teaching science, technology, engi
 
     <div class="container">
       <div class="copyright">
-        &copy; Copyright <strong><span>codesandbots</span></strong>. All Rights Reserved
+        &copy; Copyright <strong><span>CodesandBots</span></strong>. All Rights Reserved
       </div>
       <div class="credits">
         Designed by <a href="https://bootstrapmade.com/">AVIPL</a>
