--- a/ai.html
+++ b/ai.html
@@ -80,7 +80,7 @@
         <source src='assets/videos/cover_video.mp4' />
          </video>
       <div class="overlay">
-        <button  onClick="document.getElementById('middle').scrollIntoView();" type="button" style = "font-size: xx-large;" class="btn btn-primary btn-lg ">Explore NOW</button>
+        <button  onClick="document.getElementById('middle').scrollIntoView();" type="button" style = "font-size: xx-large;" class="btn btn-primary btn-lg ">Explore Now</button>
       </div>
 </div>
   </div>
@@ -95,14 +95,14 @@
       <p>Artificial intelligence (AI) is wide-ranging branch of computer science concerned with building smart machines capable of performing tasks that typically require human intelligence. AI is an interdisciplinary science with multiple approaches, but advancements in machine learning and deep learning are creating a paradigm shift in virtually every sector of the tech industry. </p>
     
     </div>
-    <div class="shadow-lg rounded col-lg-3 col-11" >
-      <img src="assets/img/ai-1.jpg" class="img-fluid" alt="">
+    <div class="col-lg-3 col-11" >
+      <img src="assets/img/AI-1.jpg" class="img-fluid" alt="">
     </div>
  </div>
 
  <h1 class="text-center pt-5" style="margin-top: 60px">Why learn AI??</h1>
  <div class="row no-gutters justify-content-around mt-5">
-  <div class="shadow-lg rounded col-lg-3 col-11" >
+  <div class="col-lg-3 col-11" >
     <img class="img-fluid" src="assets/img/ai-2.jpg" alt="">
   </div>
   <div class="col-lg-5 col-11 mt-lg-0 mt-5">
