--- a/coding.html
+++ b/coding.html
@@ -81,7 +81,7 @@
         <source src='assets/videos/coding.mp4' />
          </video>
       <div class="overlay">
-        <button onClick="document.getElementById('middle').scrollIntoView();"  type="button" style = "font-size: xx-large;" class="btn btn-primary btn-lg ">Explore NOW!</button>
+        <button onClick="document.getElementById('middle').scrollIntoView();"  type="button" style = "font-size: xx-large;" class="btn btn-primary btn-lg ">Explore Now</button>
       </div>
 </div>
 
@@ -102,15 +102,15 @@
       Take, for example, the following analogy - you click on a video app on your smartphones, and it plays a video.</p>
     
     </div>
-    <div class="shadow-lg rounded col-lg-3 col-11" >
-      <img src="assets/img/whatiscoding.jpeg" class="img-fluid" alt="">
+    <div class="col-lg-3 col-11" >
+      <img src="assets/img/coding_2.jpg" class="img-fluid" alt="">
     </div>
  </div>
 
  <h1 class="text-center pt-5" style="margin-top: 60px">Why learn Coding??</h1>
  <div class="row no-gutters justify-content-around mt-5">
-  <div class="shadow-lg rounded col-lg-3 col-11" >
-    <img class="img-fluid" src="assets/img/whylearncoding.jpeg" alt="">
+  <div class="col-lg-3 col-11" >
+    <img class="img-fluid" src="assets/img/coding_1.png" alt="">
   </div>
   <div class="col-lg-5 col-11 mt-lg-0 mt-5">
     <p>Coding not only improve your technical skill, but it also helps in improving the soft skills. Most of the time when you are working in a team you need to collaborate with other co-workers, you may have to discuss project with them, you need to interact with your manager and all these things eventually develop your soft skill which not only helps in building a good relationship in your professional life but also in personal life.
