--- a/iot.html
+++ b/iot.html
@@ -81,7 +81,7 @@
         <source src='assets/videos/cover_video2.mp4' />
          </video>
       <div class="overlay">
-        <button  onClick="document.getElementById('middle').scrollIntoView();" style = "font-size: xx-large;" type="button" class="btn btn-primary btn-lg ">Explore NOW!</button>
+        <button  onClick="document.getElementById('middle').scrollIntoView();" style = "font-size: xx-large;" type="button" class="btn btn-primary btn-lg ">Explore Now</button>
       </div>
 </div>
 
@@ -96,14 +96,14 @@
       <p>The Internet of Things (IoT) refers to a system of interrelated, internet-connected objects that are able to collect and transfer data over a wireless network without human intervention.The personal or business possibilities are endless. A ‘thing’ can refer to a connected medical device, a biochip transponder (think livestock), a solar panel, a connected automobile with sensors that alert the driver to a myriad of possible issues (fuel, tire pressure, needed maintenance, and more) or any object, outfitted with sensors, that has the ability to gather and transfer data over a network.</p>
     
     </div>
-    <div class="shadow-lg rounded col-lg-3 col-11" >
-      <img src="assets/img/iot.jpg" class="img-fluid" alt="">
+    <div class="col-lg-3 col-11" >
+      <img src="assets/img/iot1.jpg" class="img-fluid" alt="">
     </div>
  </div>
 
  <h1 class="text-center pt-5" style="margin-top: 60px">Why learn IOT??</h1>
  <div class="row no-gutters justify-content-around mt-5">
-  <div class="shadow-lg rounded col-lg-3 col-11" >
+  <div class="col-lg-3 col-11" >
     <img class="img-fluid" src="assets/img/iot2.jpg" alt="">
   </div>
   <div class="col-lg-5 col-11 mt-lg-0 mt-5">
