--- a/robotics.html
+++ b/robotics.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>CodesandBots</title>
+  <title>codesandbots</title>
   <meta content="" name="description">
   
   <link href="assets/img/icon.png" rel="icon">
@@ -61,7 +61,7 @@
     <div class="container-fluid container-xl d-flex align-items-center justify-content-between">
       <a href="index.html" class="logo d-flex align-items-center">
       	<img src="assets/img/icon.png">
-        <span>CodesandBots</span>
+        <span>codesandbots</span>
       </a>
 
       <nav id="navbar" class="navbar">
@@ -83,7 +83,7 @@
         <source src='assets/videos/robotics.mp4' />
          </video>
       <div class="overlay">
-        <button onClick="document.getElementById('middle').scrollIntoView();"style = "font-size: xx-large;"   type="button" class="btn btn-primary btn-lg ">Explore NOW!</button>
+        <button onClick="document.getElementById('middle').scrollIntoView();"style = "font-size: xx-large;"   type="button" class="btn btn-primary btn-lg ">Explore Now</button>
       </div>
 </div>
 
@@ -98,14 +98,14 @@
       <p>Robotics is the intersection of science, engineering and technology that produces machines, called robots, that substitute for (or replicate) human actions. Pop culture has always been fascinated with robots. R2-D2. Optimus Prime. WALL-E. These over-exaggerated, humanoid concepts of robots usually seem like a caricature of the real thing...or are they more forward thinking than we realize? Robots are gaining intellectual and mechanical capabilities that don’t put the possibility of a R2-D2-like machine out of reach in the future.</p>
     
     </div>
-    <div class="shadow-lg rounded col-lg-3 col-11" >
-      <img src="assets/img/robo.jpg" class="img-fluid" alt="">
+    <div class="col-lg-3 col-11" >
+      <img src="assets/img/robotics_1.jpeg" class="img-fluid" alt="">
     </div>
  </div>
 
  <h1 class="text-center pt-5" style="margin-top: 60px">Why learn Robotics??</h1>
  <div class="row no-gutters justify-content-around mt-5">
-  <div class="shadow-lg rounded  col-lg-3 col-11" >
+  <div class="col-lg-3 col-11" >
     <img class="img-fluid" src="assets/img/robo2.jpg" alt="">
   </div>
   <div class="col-lg-5 col-11 mt-lg-0 mt-5">
@@ -365,7 +365,7 @@ Robotics helps address the growing demand for teaching science, technology, engi
           <div class="col-lg-5 col-md-12 footer-info">
             <a href="index.html" class="logo d-flex align-items-center">
               <img src="assets/img/icon.png" class="img-fluid" style="margin:0px;" height="30px" alt="">
-              <span>CodesandBots</span>
+              <span>codesandbots</span>
             </a>
             <p>A Company of AVIPL</p>
             <div class="social-links mt-3">
@@ -394,7 +394,7 @@ Robotics helps address the growing demand for teaching science, technology, engi
 
     <div class="container">
       <div class="copyright">
-        &copy; Copyright <strong><span>CodesandBots</span></strong>. All Rights Reserved
+        &copy; Copyright <strong><span>codesandbots</span></strong>. All Rights Reserved
       </div>
       <div class="credits">
         Designed by <a href="https://bootstrapmade.com/">AVIPL</a>
