--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
       <nav id="navbar" class="navbar">
         <ul>
           <li><a class="nav-link active" href="index.html">Home</a></li>
-          <li class="cur dropdown scrollto"><a href="#class-project-process">Curriculum</i></a></li>
+          <li><a class="nav-link" href="#class-project-process">Curriculum</i></a></li>
           <li><a class="getstarted" href="#footer">Contact Now</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
