--- a/robotics.html
+++ b/robotics.html
@@ -65,10 +65,10 @@
       </a>
 
       <nav id="navbar" class="navbar">
-        <ul>
-          <li><a class="nav-link" href="index.html">Home</a></li>
-          <li class="dropdown scrollto"><a href="index.html#class-project-process">Curriculum</i></a></li>
-          <li><a class="getstarted" href="#footer">Contact Now</a></li>
+         <ul>
+          <li><a class="nav-link active" href="index.html">Home</a></li>
+          <li><a class="scrollto" href="index.html#class-project-process">Curriculum</a></li>
+          <li><a class="getstarted scrollto" href="#footer">Contact Now</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
