--- a/ai.html
+++ b/ai.html
@@ -381,7 +381,7 @@
         &copy; Copyright <strong><span>codesandbots</span></strong>. All Rights Reserved
       </div>
       <div class="credits">
-        Designed by <a href="https://bootstrapmade.com/">AVIPL</a>
+        Designed by <a>AVIPL</a>
       </div>
     </div>
   </footer><!-- End Footer -->
