--- a/robotics.html
+++ b/robotics.html
@@ -397,7 +397,7 @@ Robotics helps address the growing demand for teaching science, technology, engi
         &copy; Copyright <strong><span>codesandbots</span></strong>. All Rights Reserved
       </div>
       <div class="credits">
-        Designed by <a href="https://bootstrapmade.com/">AVIPL</a>
+        Designed by <a>AVIPL</a>
       </div>
     </div>
   </footer><!-- End Footer -->
