--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
       <section id="hero" class="hero d-flex align-items-center">
         <div class="container">
           <div class="row no-gutters">
-            <div class="col-lg-6 col-11 d-flex flex-column justify-content-center">
+            <div class="content col-lg-6 col-11 d-flex flex-column justify-content-center">
               <!-- <h1 data-aos="fade-up">We make students Future ready with Robotics, Artificial Intelligence, Coding and Internet of Things. -->
               <h1 data-aos="fade-up">Open for Free collaboration with Schools. Finest Industry Experts to deliver the
                 course in your School Classrooms.</h1>
