--- a/index.html
+++ b/index.html
@@ -64,7 +64,8 @@
         <ul>
           <li><a class="nav-link active" href="index.html">Home</a></li>
           <li><a class="scrollto" href="#class-project-process">Curriculum</a></li>
-          <li><a class="getstarted scrollto" href="#footer">Contact Now</a></li>
+          <li><a class="scrollto" href="#footer">Contact Now</a></li>
+          <li><a class="getstarted" href="bookafreeclass.html">Book a free class</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
@@ -1568,12 +1569,12 @@
 
           <div class="col-lg-3 col-md-12 footer-contact text-center text-md-start">
             <h4>Contact Us</h4>
-            <p>
+            <p style="font-weight: bolder; font-size: large;">
               Plot No.19, G1-Block, South City -II, Gurugram<br>
               Haryana<br>
               India<br><br>
-              <strong>Phone:</strong> +91-7976391232, +91-9871544994<br>
-              <strong>Email:</strong> e-businessinnovator@avipl.in<br>
+              <strong>Phone:</strong><br><span style="font-weight: bolder; font-size: large;"> +91-7976391232<br>
+              <strong>Email:</strong><br><span style="font-weight: bolder; font-size: large;"> e-businessinnovator@avipl.in<br>
             </p>
 
           </div>
