--- a/index.html
+++ b/index.html
@@ -1466,7 +1466,7 @@
           </div>
         </div>
 
-        <div class="col-lg-3 col-md-6 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="200">
+<!--         <div class="col-lg-3 col-md-6 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="200">
           <div class="member">
             <div class="member-img">
               <img src="assets/img/team/team-2.jpg" class="img-fluid" alt="">
@@ -1485,7 +1485,7 @@
                 curiculum so easy and Interesting such that Learning Technology becomes a way lot easier.</p>
             </div>
           </div>
-        </div>
+        </div> -->
 
         <div class="col-lg-3 col-md-6 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="300">
           <div class="member">
