--- a/index.html
+++ b/index.html
@@ -1437,7 +1437,7 @@
   </section> End Testimonials Section -->
 
   <!-- ======= Team Section ======= -->
-  <section id="team" class="team">
+  <!-- <section id="team" class="team">
 
     <div class="container" data-aos="fade-up">
 
@@ -1487,7 +1487,7 @@
           </div>
         </div> -->
 
-        <div class="col-lg-3 col-md-6 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="300">
+        <!-- <div class="col-lg-3 col-md-6 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="300">
           <div class="member">
             <div class="member-img">
               <img src="assets/img/team/team-3.jpg" class="img-fluid" alt="">
@@ -1534,7 +1534,7 @@
 
     </div>
 
-  </section><!-- End Team Section -->
+  </section>End Team Section --> -->
 
 
   <!-- ======= Footer ======= -->
